Footer links to personal site and changes color when hovered over

--- a/src/CSS/footer.css
+++ b/src/CSS/footer.css
@@ -57,3 +57,12 @@
     line-height: 1.8;
   }
 }
+
+#zachsName {
+  color: #950740;
+  /* Should I remove the underline? The underline makes it clear there is a link there. */
+}
+
+a:hover#zachsName  {
+  color: #f0ff03;
+}
